--- a/src/components/sky.css
+++ b/src/components/sky.css
@@ -1,85 +1,133 @@
-#sky{
-    width:100%;
-    height:100vh;
-    margin:0 auto;
-    padding: 4rem;
-    position:relative
-  }
-  #sky span{  
-    width:100%;
-    height:100%;
+body {
+  background-image: radial-gradient(
+    1600px at 10% 50%,
+    #12102e 10%,
+    #020409 40%
+  );
+  height: 100vh;
+}
+
+#sky {
+  width: 100%;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 4rem;
+  position: relative;
+}
+#sky span {
+  width: 100%;
+  height: 100%;
   /*  background:#4f5d73;*/
-    background-image: radial-gradient(1600px at 10% 50%, #12102e 10%, #020409 40%);
-     /* border-radius:50%; */
-    top:0; 
-    left:0;
-    position:absolute;
-    z-index:2;
-    overflow:hidden
-      
+  /* background-image: radial-gradient(1600px at 10% 50%, #12102e 10%, #020409 40%); */
+  /* border-radius:50%; */
+  top: 0;
+  left: 0;
+  position: absolute;
+  z-index: 2;
+  overflow: hidden;
+}
+
+#sky span s {
+  background-image: radial-gradient(
+      2px 2px at 20px 30px,
+      rgb(180, 184, 240),
+      rgba(0, 0, 0, 0)
+    ),
+    radial-gradient(2px 2px at 40px 70px, #fff, rgba(0, 0, 0, 0)),
+    radial-gradient(2px 2px at 50px 60px, #ddd, rgba(0, 0, 0, 0)),
+    radial-gradient(2px 2px at 90px 40px, rgb(226, 225, 224), rgba(0, 0, 0, 0)),
+    radial-gradient(2px 2px at 30px 8px, #fff, rgba(0, 0, 0, 0)),
+    radial-gradient(2px 2px at 60px 20px, rgb(226, 225, 142), rgba(0, 0, 0, 0));
+  background-repeat: repeat;
+  background-size: 200px 200px;
+  -webkit-animation: zoom 25s infinite alternate;
+  -moz-animation: zoom 25s infinite alternate;
+  animation: zoom 25s infinite alternate;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+#sky span s:nth-child(1) {
+  background-position: 50% 50%;
+  -webkit-animation-delay: 0s;
+  -moz-animation-delay: 0s;
+  animation-delay: 0s;
+}
+#sky span s:nth-child(2) {
+  background-position: 20% 60%;
+  -webkit-animation-delay: 1s;
+  -moz-animation-delay: 1s;
+  animation-delay: 1s;
+}
+#sky span s:nth-child(3) {
+  background-position: -20% -30%;
+  -webkit-animation-delay: 2s;
+  -moz-animation-delay: 2s;
+  animation-delay: 2s;
+}
+#sky span s:nth-child(4) {
+  background-position: 40% -80%;
+  -webkit-animation-delay: 3s;
+  -moz-animation-delay: 3s;
+  animation-delay: 3s;
+}
+#sky span s:nth-child(5) {
+  background-position: -20% 30%;
+  -webkit-animation-delay: 4s;
+  -moz-animation-delay: 4s;
+  animation-delay: 4s;
+}
+
+@-webkit-keyframes zoom {
+  0% {
+    opacity: 0.5;
+    -webkit-transform: scale(1);
+    -webkit-animation-timing-function: ease-in-out;
   }
-  #sky span s{
-    background-image: 
-      radial-gradient(2px 2px at 20px 30px, rgb(180,184,240), rgba(0, 0, 0, 0)),
-      radial-gradient(2px 2px at 40px 70px, #fff, rgba(0,0,0,0)),
-      radial-gradient(2px 2px at 50px 60px, #ddd, rgba(0,0,0,0)),
-      radial-gradient(2px 2px at 90px 40px, rgb(226,225,224), rgba(0,0,0,0)),
-      radial-gradient(2px 2px at 30px 8px, #fff, rgba(0,0,0,0)),
-      radial-gradient(2px 2px at 60px 20px, rgb(226,225,142), rgba(0,0,0,0));
-    background-repeat: repeat;
-    background-size: 200px 200px;
-   -webkit-animation: zoom 25s infinite alternate ;
-    -moz-animation: zoom 25s infinite alternate ;
-    animation: zoom 25s infinite alternate ;
-    opacity: 0; overflow: hidden;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+  85% {
+    opacity: 1;
+    -webkit-transform: scale(2.8);
+    -webkit-animation-timing-function: linear;
   }
-  
-  
-  #sky span s:nth-child(1) {
-    background-position: 50% 50%;
-    -webkit-animation-delay: 0s;
-    -moz-animation-delay: 0s;
-    animation-delay: 0s
+  100% {
+    opacity: 0.5;
+    -webkit-transform: scale(3);
   }
-  #sky span s:nth-child(2) {
-    background-position: 20% 60%;
-    -webkit-animation-delay: 1s;
-    -moz-animation-delay: 1s;
-    animation-delay: 1s
+}
+@-moz-keyframes zoom {
+  0% {
+    opacity: 0.5;
+    -moz-transform: scale(1);
+    -moz-animation-timing-function: ease-in-out;
   }
-  #sky span s:nth-child(3) {
-    background-position: -20% -30%;
-    -webkit-animation-delay: 2s;
-    -moz-animation-delay: 2s;
-    animation-delay: 2s
+  85% {
+    opacity: 1;
+    -moz-transform: scale(1.8);
+    -moz-animation-timing-function: linear;
   }
-  #sky span s:nth-child(4) {
-    background-position: 40% -80%;
-    -webkit-animation-delay: 3s;
-    -moz-animation-delay: 3s;
-    animation-delay: 3s
+  100% {
+    opacity: 0.5;
+    -moz-transform: scale(2);
   }
-  #sky span s:nth-child(5) {
-    background-position: -20% 30%;
-    -webkit-animation-delay: 4s;
-    -moz-animation-delay: 4s;
-    animation-delay: 4s
+}
+@keyframes zoom {
+  0% {
+    opacity: 0.5;
+    transform: scale(1);
+    animation-timing-function: ease-in-out;
   }
-  
-  @-webkit-keyframes zoom{
-  0%{opacity:0.5;-webkit-transform:scale(1);-webkit-animation-timing-function:ease-in-out}
-  85%{opacity:1;-webkit-transform:scale(2.8);-webkit-animation-timing-function:linear}
-  100%{opacity:0.5;-webkit-transform:scale(3.0)}}
-  @-moz-keyframes zoom{
-  0%{opacity:0.5;-moz-transform:scale(1);-moz-animation-timing-function:ease-in-out}
-  85%{opacity:1;-moz-transform:scale(1.8);-moz-animation-timing-function:linear}
-  100%{opacity:0.5;-moz-transform:scale(2.0)}}
-  @keyframes zoom{
-  0%{opacity:0.5;transform:scale(1);animation-timing-function:ease-in-out}
-  85%{opacity:1;transform:scale(1.8);animation-timing-function:linear}
-  100%{opacity:0.5;transform: scale(2.0)}}
+  85% {
+    opacity: 1;
+    transform: scale(1.8);
+    animation-timing-function: linear;
+  }
+  100% {
+    opacity: 0.5;
+    transform: scale(2);
+  }
+}
