--- a/src/components/sky.css
+++ b/src/components/sky.css
@@ -13,36 +13,60 @@ body {
   margin: 0 auto;
   padding: 4rem;
   position: relative;
+  overflow: hidden;
+  contain: layout style paint;
+  isolation: isolate;
+  pointer-events: none;
 }
+
+/* Multi-layer starfield - Far layer (background stars) */
 #sky span {
   width: 100%;
   height: 100%;
-  /*  background:#4f5d73;*/
-  /* background-image: radial-gradient(1600px at 10% 50%, #12102e 10%, #020409 40%); */
-  /* border-radius:50%; */
   top: 0;
   left: 0;
   position: absolute;
-  z-index: 2;
+  z-index: 0;
   overflow: hidden;
+  /* GPU acceleration and isolation */
+  will-change: transform, opacity;
+  transform: translateZ(0);
+  backface-visibility: hidden;
 }
 
+/* Progressive fade-in animation */
+@keyframes fadeInStars {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+/* Zoom in/out animation - dynamic movement like old code, optimized for GPU */
+@keyframes zoom {
+  0% {
+    opacity: 0.5;
+    transform: scale(1) translateZ(0);
+    animation-timing-function: ease-in-out;
+  }
+  85% {
+    opacity: 1;
+    transform: scale(1.8) translateZ(0);
+    animation-timing-function: linear;
+  }
+  100% {
+    opacity: 0.5;
+    transform: scale(2) translateZ(0);
+  }
+}
+
+/* Far layer stars - small, slow moving with fade-in and zoom */
 #sky span s {
-  background-image: radial-gradient(
-      2px 2px at 20px 30px,
-      rgb(180, 184, 240),
-      rgba(0, 0, 0, 0)
-    ),
-    radial-gradient(2px 2px at 40px 70px, #fff, rgba(0, 0, 0, 0)),
-    radial-gradient(2px 2px at 50px 60px, #ddd, rgba(0, 0, 0, 0)),
-    radial-gradient(2px 2px at 90px 40px, rgb(226, 225, 224), rgba(0, 0, 0, 0)),
-    radial-gradient(2px 2px at 30px 8px, #fff, rgba(0, 0, 0, 0)),
-    radial-gradient(2px 2px at 60px 20px, rgb(226, 225, 142), rgba(0, 0, 0, 0));
+
   background-repeat: repeat;
-  background-size: 200px 200px;
-  -webkit-animation: zoom 25s infinite alternate;
-  -moz-animation: zoom 25s infinite alternate;
-  animation: zoom 25s infinite alternate;
+  background-size: 250px 250px;
   opacity: 0;
   overflow: hidden;
   position: absolute;
@@ -50,84 +74,77 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+  transform-origin: center center;
+  /* GPU acceleration */
+  will-change: transform, opacity;
+  transform: translateZ(0);
+  backface-visibility: hidden;
+  animation: fadeInStars 3s ease-in forwards, zoom 30s infinite alternate ease-in-out;
+  animation-delay: 0s, 3s;
 }
 
+/* Mid layer stars - medium size, medium speed with fade-in and zoom */
+#sky span:nth-child(2) s {
+  background-image: radial-gradient(
+      2px 2px at 25px 35px,
+      rgba(255, 255, 255, 0.8),
+      rgba(0, 0, 0, 0)
+    ),
+    radial-gradient(2px 2px at 45px 75px, rgba(180, 184, 240, 0.7), rgba(0, 0, 0, 0)),
+    radial-gradient(1.5px 1.5px at 55px 65px, rgba(255, 220, 180, 0.6), rgba(0, 0, 0, 0)),
+    radial-gradient(2px 2px at 95px 45px, rgba(255, 255, 255, 0.7), rgba(0, 0, 0, 0)),
+    radial-gradient(1.5px 1.5px at 35px 12px, rgba(200, 220, 255, 0.6), rgba(0, 0, 0, 0)),
+    radial-gradient(2px 2px at 65px 25px, rgba(255, 240, 200, 0.7), rgba(0, 0, 0, 0));
+  background-size: 200px 200px;
+  opacity: 0;
+  transform-origin: center center;
+  /* GPU acceleration */
+  will-change: transform, opacity;
+  transform: translateZ(0);
+  backface-visibility: hidden;
+  animation: fadeInStars 3s ease-in forwards, zoom 25s infinite alternate ease-in-out;
+  animation-delay: 1s, 4s;
+}
+
+/* Near layer stars - larger, faster moving with fade-in and zoom */
+#sky span:nth-child(3) s {
+  background-image: radial-gradient(
+      3px 3px at 30px 40px,
+      rgba(255, 255, 255, 1),
+      rgba(0, 0, 0, 0)
+    ),
+    radial-gradient(2.5px 2.5px at 50px 80px, rgba(255, 200, 150, 0.9), rgba(0, 0, 0, 0)),
+    radial-gradient(3px 3px at 60px 70px, rgba(180, 184, 240, 0.9), rgba(0, 0, 0, 0)),
+    radial-gradient(2px 2px at 100px 50px, rgba(255, 255, 255, 0.8), rgba(0, 0, 0, 0)),
+    radial-gradient(3px 3px at 40px 15px, rgba(255, 240, 200, 0.9), rgba(0, 0, 0, 0)),
+    radial-gradient(2.5px 2.5px at 70px 30px, rgba(200, 220, 255, 0.8), rgba(0, 0, 0, 0));
+  background-size: 150px 150px;
+  opacity: 0;
+  transform-origin: center center;
+  /* GPU acceleration */
+  will-change: transform, opacity;
+  transform: translateZ(0);
+  backface-visibility: hidden;
+  animation: fadeInStars 3s ease-in forwards, zoom 20s infinite alternate ease-in-out;
+  animation-delay: 2s, 5s;
+}
+
+/* Shooting stars - removed to prevent flickering */
+
+/* Star layer positioning - staggered delays for progressive appearance */
 #sky span s:nth-child(1) {
   background-position: 50% 50%;
-  -webkit-animation-delay: 0s;
-  -moz-animation-delay: 0s;
-  animation-delay: 0s;
 }
 #sky span s:nth-child(2) {
   background-position: 20% 60%;
-  -webkit-animation-delay: 1s;
-  -moz-animation-delay: 1s;
-  animation-delay: 1s;
 }
 #sky span s:nth-child(3) {
   background-position: -20% -30%;
-  -webkit-animation-delay: 2s;
-  -moz-animation-delay: 2s;
-  animation-delay: 2s;
 }
 #sky span s:nth-child(4) {
   background-position: 40% -80%;
-  -webkit-animation-delay: 3s;
-  -moz-animation-delay: 3s;
-  animation-delay: 3s;
 }
 #sky span s:nth-child(5) {
   background-position: -20% 30%;
-  -webkit-animation-delay: 4s;
-  -moz-animation-delay: 4s;
-  animation-delay: 4s;
 }
 
-@-webkit-keyframes zoom {
-  0% {
-    opacity: 0.5;
-    -webkit-transform: scale(1);
-    -webkit-animation-timing-function: ease-in-out;
-  }
-  85% {
-    opacity: 1;
-    -webkit-transform: scale(2.8);
-    -webkit-animation-timing-function: linear;
-  }
-  100% {
-    opacity: 0.5;
-    -webkit-transform: scale(3);
-  }
-}
-@-moz-keyframes zoom {
-  0% {
-    opacity: 0.5;
-    -moz-transform: scale(1);
-    -moz-animation-timing-function: ease-in-out;
-  }
-  85% {
-    opacity: 1;
-    -moz-transform: scale(1.8);
-    -moz-animation-timing-function: linear;
-  }
-  100% {
-    opacity: 0.5;
-    -moz-transform: scale(2);
-  }
-}
-@keyframes zoom {
-  0% {
-    opacity: 0.5;
-    transform: scale(1);
-    animation-timing-function: ease-in-out;
-  }
-  85% {
-    opacity: 1;
-    transform: scale(1.8);
-    animation-timing-function: linear;
-  }
-  100% {
-    opacity: 0.5;
-    transform: scale(2);
-  }
-}
